--- a/client/package.json
+++ b/client/package.json
@@ -9,15 +9,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^7.3.4",
+    "@react-google-maps/api": "^2.20.7",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.1",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.6",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^5.2.0"
   }
 }
