--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
-    "nodemon": "^3.1.10"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
