--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,34 +5,44 @@ services:
       target: development
     ports:
       - "5000:5000"
-    env_file:
-      - ./server/.env
+    command: node -r dotenv/config src/index.js
+    environment:
+      - NODE_ENV=development
     volumes:
       - ./server:/app
       - /app/node_modules
-    environment:
-      - NODE_ENV=development
     networks:
       - app-network
-
+  server-test:
+    build:
+      context: ./server
+      target: development
+    ports:
+      - "5001:5000"
+    command: node -r dotenv/config src/index.js
+    environment:
+      - NODE_ENV=test
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    networks:
+      - app-network
   client:
     build:
       context: ./client
       target: development
     ports:
       - "5173:5173"
-    env_file:
-      - ./client/.env
+    environment:
+      - VITE_API_URL=http://localhost:5000/api
+      - VITE_API_URL_TEST=http://localhost:5001/api
     volumes:
       - ./client:/app
       - /app/node_modules
-    environment:
-      - VITE_API_URL=http://server:5000/api
     depends_on:
       - server
     networks:
       - app-network
-
 networks:
   app-network:
     driver: bridge
