--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node -r dotenv/config src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
   "keywords": [],
