--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
     "cypress:run": "cypress run"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@mui/material": "^7.3.4",
     "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.9.0",
@@ -22,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "simplebar-react": "^3.3.2",
     "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0"
   },
