--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,18 @@
     "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.9.0",
     "@stripe/react-stripe-js": "^5.2.0",
+    "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.12.2",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
+    "react-slick": "^0.31.0",
     "simplebar-react": "^3.3.2",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "^19.1.0"
   },
