--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.12.2",
     "chart.js": "^4.5.1",
+    "dayjs": "^1.11.19",
+    "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.1",
