--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^7.0.9",
     "pdfmake": "^0.2.20",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "stripe": "^19.1.0",
     "winston": "^3.18.3",
     "xlsx": "^0.18.5"
