--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,40 @@
+version: '3.8'
+
 services:
-  server:
+  comcon_server:
+    container_name: comcon_server
     build:
       context: ./server
-      target: development
+      dockerfile: Dockerfile
     ports:
-      - "5000:5000"
-    command: node -r dotenv/config src/index.js
-    environment:
-      - NODE_ENV=development
-    volumes:
-      - ./server:/app
-      - /app/node_modules
+      - "10100:10100"
+    env_file:
+      - ./server/.env
     networks:
-      - app-network
-  server-test:
-    build:
-      context: ./server
-      target: development
-    ports:
-      - "5001:5000"
-    command: node -r dotenv/config src/index.js
-    environment:
-      - NODE_ENV=test
+      - public_network
+    restart: unless-stopped
     volumes:
-      - ./server:/app
+      - ./server:/app:rw
       - /app/node_modules
-    networks:
-      - app-network
-  client:
+
+  comcon_client:
+    container_name: comcon_client
     build:
       context: ./client
-      target: development
+      dockerfile: Dockerfile
     ports:
-      - "5173:5173"
-    environment:
-      - VITE_API_URL=http://localhost:5000/api
-      - VITE_API_URL_TEST=http://localhost:5001/api
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-    depends_on:
-      - server
+      - "10200:10200"
+    env_file:
+      - ./client/.env
     networks:
-      - app-network
+      - public_network
+    restart: unless-stopped
+    depends_on:
+      - comcon_server
+    volumes:
+      - ./client:/app:rw
+      - /app/node_modules
+
 networks:
-  app-network:
-    driver: bridge
+    public_network:
+      external: true
